scripts/editor/tree-sitter-nanocn/grammar.js
    source_file: $ => seq(
      repeat($._decl),
      $.main_decl,
    ),

    // ======================================================================
    // Declarations
    // ======================================================================

    _decl: $ => choice(
      $.fun_decl,
      $.rfun_decl,
      $.sort_decl,
      $.type_decl,
    ),

    // `fun` covers two forms: the surface fun-decl (with branches) and
    // the refined surface-embedded fun-decl (with single-param header
    // and a body expression). They disambiguate on the first token
    // after the name.
    fun_decl: $ => choice(
      seq(
        'fun',
        field('name', $.lower_ident),
        ':',
        field('arg_sort', $._sort),
        '->',
        field('ret_sort', $._sort),
        '[', field('eff', $.eff_level), ']',
        '=',
        '{',
        field('branches', sepBy1('|', $.branch)),
        '}',
      ),
      seq(
        'fun',
        field('name', $.lower_ident),
        '(',
        field('param', $.lower_ident),
        ':',
        field('arg_sort', $._sort),
        ')',
        '->',
        field('ret_sort', $._sort),
        '[', field('eff', $.eff_level), ']',
        '=',
        field('body', $._expr),
      ),
    ),

    rfun_decl: $ => seq(
      'rfun',
      field('name', $.lower_ident),
      field('domain', $.pf_domain),
      '->',
      field('codomain', $.pf_sort),
      '[', field('eff', $.eff_level), ']',
      '=',
      field('body', $._crt_expr),
    ),

    sort_decl: $ => seq(
      'sort',
      field('name', $.upper_label),
      optional(seq(
        '(',
        field('params', sepBy1(',', $.lower_ident)),
        ')',
      )),
      '=',
      '{',
      field('ctors', sepBy1('|', $.ctor_decl)),
      '}',
    ),

    type_decl: $ => seq(
      'type',
      field('name', $.upper_label),
      optional(seq(
        '(',
        field('params', sepBy1(',', $.lower_ident)),
        ')',
      )),
      '=',
      '{',
      field('ctors', sepBy1('|', $.ctor_decl)),
      '}',
    ),

    ctor_decl: $ => seq(
      field('label', $.upper_label),
      ':',
      field('sort', $._sort),
    ),

    branch: $ => seq(
      field('pat', $._pat),
      '->',
      field('body', $._expr),
    ),

    main_decl: $ => choice(
      // surface main
      seq(
        'main', ':',
        field('ret_sort', $._sort),
        '[', field('eff', $.eff_level), ']',
        '=',
        field('body', $._expr),
      ),
      // refined main
      seq(
        'main', ':',
        field('pf', $.pf_sort),
        '[', field('eff', $.eff_level), ']',
        '=',
        field('body', $._crt_expr),
      ),
    ),

    eff_level: _ => choice('pure', 'impure', 'spec'),

    // ======================================================================
    // Sorts
    // ======================================================================

    _sort: $ => choice(
      $.pred_sort,
      $.ptr_sort,
      $._atomic_sort,
    ),

    ptr_sort:  $ => seq('Ptr',  field('inner', $._atomic_sort)),

    _atomic_sort: $ => choice(
      $.unit_sort,
      $.paren_sort,
      $.tuple_sort,
      $.int_sort,
      $.bool_sort,
      $.app_sort,
      $.name_sort,
      $.tvar_sort,
    ),

    unit_sort:  _ => seq('(', ')'),
    paren_sort: $ => seq('(', $._sort, ')'),
    tuple_sort: $ => seq(
      '(',
      $._sort,
      '*',
      sepBy1('*', $._sort),
      ')',
    ),
    int_sort:   _ => 'Int',
    bool_sort:  _ => 'Bool',
    app_sort:   $ => seq(
      field('name', $.upper_label),
      '(',
      field('args', sepBy1(',', $._sort)),
      ')',
    ),
    tvar_sort:  $ => $.lower_ident,

    // ======================================================================
    // Patterns
    // ======================================================================

    _pat: $ => choice($.ctor_pat, $._atomic_pat),

    ctor_pat: $ => seq(
      field('label', $.upper_label),
      field('arg', $._atomic_pat),
    ),

    _atomic_pat: $ => choice(
      $.var_pat,
      $.unit_pat,
      $.paren_pat,
      $.tuple_pat,
    ),

    var_pat:   $ => $.lower_ident,
    tuple_pat: $ => seq(
      '(', $._pat, ',', sepBy1(',', $._pat), ')',
    ),

    // ======================================================================
    // Surface expressions (expr → seq_expr → or_expr → … → simple_expr)
    // ======================================================================

    _expr: $ => choice(
      $.annot_expr,
      $._seq_expr,
    ),

    annot_expr: $ => prec.right(PREC.annot, seq(
      field('inner', $._seq_expr),
      ':',
      field('sort', $._sort),
    )),

    _seq_expr: $ => choice(
      $.let_expr,
      $.take_expr,
      $.return_expr,
      $.fail_expr,
      $.case_expr,
      $.iter_expr,
      $.if_expr,
      $._or_expr,
    ),

    let_expr: $ => choice(
      seq(
        'let', field('pat', $._pat),
        ':', field('sort', $._sort),
        '=', field('value', $._expr),
        ';', field('body', $._seq_expr),
      ),
      seq(
        'let', field('pat', $._pat),
        '=', field('value', $._expr),
        ';', field('body', $._seq_expr),
      ),
    ),

    case_expr: $ => seq(
      'case', field('scrutinee', $._app_expr), 'of',
      '{',
      field('branches', sepBy1('|', $.case_branch)),
      '}',
    ),

    case_branch: $ => seq(
      field('pat', $._pat),
      '->',
      field('body', $._expr),
    ),

    if_expr: $ => seq(
      'if',   field('cond', $._expr),
      'then', field('then', $._expr),
      'else', field('else', $._seq_expr),
    ),

    // Binary-op precedence cascade. Left-associative at every level.
    _and_expr: $ => choice(
      $.and_expr,
      $._eq_expr,
    ),
    and_expr: $ => prec.left(PREC.and, seq(
      field('left',  $._and_expr),
      field('op',    '&&'),
      field('right', $._eq_expr),
    )),

    _eq_expr: $ => choice(
      $.eq_expr,
      $._cmp_expr,
    ),
    cmp_expr: $ => prec.left(PREC.cmp, seq(
      field('left',  $._add_expr),
      field('op',    choice('<', '<=', '>', '>=')),
      field('right', $._add_expr),
    )),

    _add_expr: $ => choice(
      $.add_expr,
      $._mul_expr,
    ),
    add_expr: $ => prec.left(PREC.add, seq(
      field('left',  $._add_expr),
      field('op',    choice('+', '-')),
      field('right', $._mul_expr),
    )),

    _mul_expr: $ => choice(
      $.mul_expr,
      $._app_expr,
    ),
    mul_expr: $ => prec.left(PREC.mul, seq(
      field('left',  $._mul_expr),
      field('op',    choice('*', '/')),
      field('right', $._app_expr),
    )),

    // app_expr: Label-inject | state_prim[ty] e | not e | f e | simple
    _app_expr: $ => choice(
      $.inject_expr,
      $.state_prim_app,
      $.not_expr,
      $.fun_call,
      $._simple_expr,
    ),

    inject_expr: $ => prec.right(PREC.inject, seq(
      field('label', $.upper_label),
      field('arg',   $._app_expr),
    )),

    state_prim_app: $ => seq(
      field('prim', $.state_prim),
      '[', field('ty', $._sort), ']',
      field('arg', $._simple_expr),
    ),

    state_prim: _ => choice('Eq', 'Set', 'Get', 'New', 'Del', 'Own'),

    fun_call: $ => prec.left(PREC.app, seq(
      field('func', $.lower_ident),
      field('arg',  $._simple_expr),
    )),

    _simple_expr: $ => choice(
      $.var_expr,
      $.hole_expr,
      $.int_lit,
      $.bool_lit,
      $.unit_expr,
      $.paren_expr,
      $.tuple_expr,
    ),

    var_expr:   $ => $.lower_ident,
    int_lit:    _ => /\d+/,
    bool_lit:   _ => choice('true', 'false'),
    unit_expr:  _ => seq('(', ')'),
    paren_expr: $ => seq('(', $._expr, ')'),
    tuple_expr: $ => seq(
      '(', $._expr, ',', sepBy1(',', $._expr), ')',
    ),

    // ======================================================================
    // Refined: proof sorts (pf_sort — used for codomains and annotations)
    // ======================================================================

    pf_sort: $ => seq(
      '(', sepBy(',', $.pf_entry), ')',
    ),

    pf_entry: $ => choice(
      // x : s
      seq(field('var', $.lower_ident),
          ':', field('sort', $._sort)),
      // [eff] x : s
      seq('[', field('eff', $.eff_level), ']',
          field('var', $.lower_ident),
          ':', field('sort', $._sort)),
      // [log] prop
      seq('[', 'log', ']', field('prop', $._app_expr)),
      // [res] pred @ value
      seq('[', 'res', ']',
          field('pred', $._app_expr), '@',
          field('value', $._app_expr)),
      // [res] (do y : s = e)
      seq('[', 'res', ']', '(',
          'do', field('bound_var', $.lower_ident),
          ':', field('bound_sort', $._sort),
          '=', field('pred', $._app_expr),
          ')'),
      // [res] (do y = e)
      seq('[', 'res', ']', '(',
          'do', field('bound_var', $.lower_ident),
          '=', field('pred', $._app_expr),
          ')'),
    ),

    // ======================================================================
    // Refined: proof domain (rfun param lists; every entry binds)
    // ======================================================================

    pf_domain: $ => seq(
      '(', sepBy(',', $.pf_domain_entry), ')',
    ),

    pf_domain_entry: $ => choice(
      seq(field('var', $.lower_ident),
          ':', field('sort', $._sort)),
      seq('[', field('eff', $.eff_level), ']',
          field('var', $.lower_ident),
          ':', field('sort', $._sort)),
      seq('[', 'log', ']', field('var', $.lower_ident),
          ':', field('prop', $._app_expr)),
      seq('[', 'log', ']', 'auto',
          ':', field('prop', $._app_expr)),
      seq('[', 'res', ']', field('var', $.lower_ident), ':',
          field('pred', $._app_expr), '@',
          field('value', $._app_expr)),
      seq('[', 'res', ']', field('var', $.lower_ident), ':',
          '(',
          'do', field('bound_var', $.lower_ident),
          ':', field('bound_sort', $._sort),
          '=', field('pred', $._app_expr),
          ')'),
      seq('[', 'res', ']', field('var', $.lower_ident), ':',
          '(',
          'do', field('bound_var', $.lower_ident),
          '=', field('pred', $._app_expr),
          ')'),
    ),

    // ======================================================================
    // Core refined terms (crt)
    // ======================================================================

    _crt_expr: $ => choice($.crt_annot, $._crt_seq_expr),

    crt_annot: $ => prec.right(PREC.annot, seq(
      field('inner', $._crt_seq_expr),
      ':', field('pf', $.pf_sort),
    )),

    _crt_seq_expr: $ => choice(
      $.crt_let,
      $.crt_let_log,
      $.crt_let_log_annot,
      $.crt_let_res,
      $.crt_let_res_annot,
      $.crt_let_core,
      $.crt_iter,
      $.crt_if,
      $.crt_case,
      $.crt_exfalso,
      $.hole_expr,
      $.crt_open_take,
      $.crt_spine,
      $.crt_call,
      $.crt_prim_app,
    ),

    crt_let_log: $ => seq(
      'let', 'log', field('pat', $.lpat_inner),
      '=', field('value', $.lpf_expr),
      ';', field('body', $._crt_seq_expr),
    ),

    crt_let_log_annot: $ => seq(
      'let', 'log', field('pat', $.lpat_inner),
      ':', field('prop', $._app_expr),
      '=', field('value', $.lpf_expr),
      ';', field('body', $._crt_seq_expr),
    ),

    crt_exfalso:  _ => 'exfalso',
    crt_spine: $ => seq(
      '(', sepBy(',', $.spine_arg), ')',
    ),

    crt_call: $ => prec.left(PREC.app, seq(
      field('func', $.lower_ident),
      field('spine', $.spine),
    )),

    spine: $ => seq(
      '(', sepBy(',', $.spine_arg), ')',
    ),

    spine_arg: $ => choice(
      seq('log', field('value', $.lpf_expr)),
      seq('res', field('value', $.rpf_expr)),
      field('value', $._expr),
    ),

    // ======================================================================
    // Refined: rpat (Phase 1 pattern matching)
    // ======================================================================

    lpf_expr: $ => choice($.lpf_annot, $._lpf_atom),

    _lpf_atom: $ => choice(
      $.lpf_var,
      $.lpf_auto,
      $.lpf_unfold,
      $.lpf_open_ret,
      $.hole_expr,
    ),

    lpf_auto: _ => 'auto',
    lower_ident: _ => /[a-z][a-zA-Z0-9_']*/,
    upper_label: _ => /[A-Z][a-zA-Z0-9_']*/,
